# graphs_analysis

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  flake.nix  perf2folded.sh  pyproject.toml
.github/workflows/: ci.yml
dataset_msbfs/: test
dataset_tc/test/: test_2_tri.txt  test_line.txt
src/: bench_msbfs.cpp  bench_tc.cpp  main.cpp  process_msbfs_results.py  process_tc_results.py
src/graphblas/: msbfs.cpp  msbfs.hpp  triangles_counting.cpp  triangles_counting.hpp  utils.cpp  utils.hpp
src/msbfs/: gb_msbfs.py  pyspark_msbfs.py  pyspla_msbfs.py
src/spla/: msbfs.cpp  msbfs.hpp  triangles_counting.cpp  triangles_counting.hpp  utils.cpp  utils.hpp
